# graphobs

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/release-notes/: v0.1.0.md  v0.2.0.md  v0.2.1.md  v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.4.0.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  examples.md  index.md  release-versioning.md
docs/adr/: 0001-accept-sync-async-duplication.md
docs/articles/: index.md  medium-companion.md  traces-mess-part-2.md
docs/concepts/: backend-portability.md  designing-node-contracts.md  payload-safety-redaction.md  public-neutrality.md  public-vs-private-state.md  state-logs-traces.md
docs/guides/: index.md  migration-one-node-at-a-time.md
docs/refactoring/: phase-0-baseline.md  phase-5-cleanup.md  target-package-map-roadmap.md
docs/reference/: callbacks.md  contracts.md  demo.md  discovery.md  index.md  langgraph.md  logging.md  package.md  payloads.md  tracing.md
docs/releases/: index.md  v0.1.0.md  v0.2.0.md  v0.2.1.md  v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.4.0.md
docs/tutorials/: quickstart.md
examples/: README.md  __init__.py  _support.py  langgraph_contracts.py  minimal_import.py
examples/backend_export/: README.md  __init__.py  app.py  trace_snippet.json
examples/notebooks/: quickstart.ipynb
examples/simple_rag/: README.md  __init__.py  app.py  trace_snippet.json
examples/subgraph_boundary/: README.md  __init__.py  app.py  trace_snippet.json
examples/tool_agent/: README.md  __init__.py  app.py  trace_snippet.json
src/graph_observability_kit/: __init__.py  _instrumented_execution.py  _read_tracking.py  _shape_summary.py  _state_paths.py  callbacks.py  contracts.py  demo.py  discovery.py  langgraph.py  logging.py  payloads.py  tracing.py
src/graph_observability_kit/_integrations/: __init__.py
src/graph_observability_kit/_observability/: __init__.py  payload_policy.py
src/graph_observability_kit/contracts/: __init__.py  models.py  projection.py  validation.py
src/graph_observability_kit/demo/: span_records.py  tracing_setup.py
src/graph_observability_kit/discovery/: __init__.py  draft.py  runner.py
src/graph_observability_kit/langgraph/: callbacks.py  execution.py  nodes.py  read_audit.py  schemas.py  subgraphs.py
src/graph_observability_kit/logging/: __init__.py  callback.py  invoke_config.py  lifecycle.py
src/graph_observability_kit/state/: __init__.py  observed_access.py  policies.py  read_tracking.py
src/graphobs/: __init__.py  payloads.py  tracing.py
src/graphobs/_observability/: payload_policy.py
src/graphobs/contracts/: conformance.py  models.py  projection.py  validation.py
src/graphobs/demo/: __init__.py  span_records.py  tracing_setup.py
src/graphobs/discovery/: draft.py  drift.py  runner.py
src/graphobs/langgraph/: __init__.py  callbacks.py  execution.py  nodes.py  read_audit.py  schemas.py  subgraphs.py
src/graphobs/logging/: callback.py  context.py  invoke_config.py  lifecycle.py
src/graphobs/state/: observed_access.py  paths.py  policies.py  read_tracking.py
tests/: conftest.py  test_callbacks.py  test_conformance.py  test_contracts.py  test_demo.py  test_discovery.py  test_docs_reference.py  test_examples.py  test_import.py  test_langgraph_integration.py  test_lifecycle_logging.py  test_logging.py  test_observed_access.py  test_package_metadata.py  test_payload_policy.py  test_read_audit.py  test_read_tracking.py  test_shape_summary.py  test_state_paths.py  test_tracing.py
